--- a/moa/src/main/resources/application.properties
+++ b/moa/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
-#If you want to use existing data, change the option of ddl-auto to none
+#If you want to use existing data, change the option form ddl-auto to none
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.default_batch_fetch_size=100
 spring.jpa.properties.format_sql=true
