MemberController: login, logout 분리

--- a/moa/src/main/resources/application.properties
+++ b/moa/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.url=jdbc:h2:tcp://localhost/~/moa
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
+## instead of
+spring.config.import=optional:./db.properties
+spring.profiles.active=dev
 
 #If you want to use existing data, change the option form ddl-auto to none
 spring.jpa.hibernate.ddl-auto=create
+
 spring.jpa.properties.hibernate.default_batch_fetch_size=100
 spring.jpa.properties.format_sql=true
 spring.jpa.properties.show_sql=true
