--- a/moa/build.gradle
+++ b/moa/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 //	runtimeOnly 'com.h2database:h2'
 
 	//security
-//	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 
 	// in detail show parameter of jpa sql
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
