--- a/moa/build.gradle
+++ b/moa/build.gradle
@@ -46,6 +46,10 @@ dependencies {
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+
+	// Mockito 및 JUnit 의존성 추가
+	testImplementation 'org.mockito:mockito-core:3.12.4'
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
 }
 
 tasks.named('test') {
