--- a/moa/src/main/resources/application.properties
+++ b/moa/src/main/resources/application.properties
@@ -14,8 +14,7 @@ spring.jpa.properties.show_sql=true
 
 
 
-
 logging.level.org.hibernate.sql=debug
 
 #security logging
-logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.security=DEBUG
